Update project to support Amazon Corretto 8 instead of Java 11